fixed some issues with file creation